# yawgpu

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  README.md
examples/build-metal/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/build-metal/compute/: Makefile  cmake_install.cmake
examples/build-metal/device_info/: Makefile  cmake_install.cmake  device_info
examples/build-metal/enumerate_adapters/: Makefile  cmake_install.cmake  enumerate_adapters
examples/build-metal/framework/: Makefile  cmake_install.cmake
examples/build-vulkan/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/build-vulkan/compute/: Makefile  cmake_install.cmake  compute
examples/build-vulkan/device_info/: Makefile  cmake_install.cmake
examples/build-vulkan/enumerate_adapters/: Makefile  cmake_install.cmake
examples/build-vulkan/framework/: Makefile  cmake_install.cmake
examples/capture/: CMakeLists.txt  main.c
examples/cmake/: copy_runtime_dll.cmake  copy_tint_shim.cmake
examples/compute/: CMakeLists.txt  main.c  shader.wgsl
examples/device_info/: CMakeLists.txt  main.c
examples/enumerate_adapters/: CMakeLists.txt  main.c
examples/framework/: CMakeLists.txt  framework.c  framework.h  framework_macos.m  framework_windows.c
examples/hello_triangle/: CMakeLists.txt  main.c  shader.wgsl
examples/surface_smoke/: CMakeLists.txt  main.c
examples/tiled_deferred/: CMakeLists.txt  composite.wgsl  gbuffer.wgsl  lighting.wgsl  main.c  math.h
examples/tiled_msaa/: CMakeLists.txt  main.c  persample.wgsl  resolve.wgsl  scene.wgsl
examples/triangle/: CMakeLists.txt  main.c  shader.wgsl
examples/triangle_passthrough/: CMakeLists.txt  main.c  triangle.frag.glsl  triangle.frag.spv  triangle.msl  triangle.vert.glsl  triangle.vert.spv
specs/: SPEC.md
yawgpu/: Cargo.toml  build.rs
yawgpu-core/: Cargo.toml
yawgpu-core/src/: adapter.rs  bind_group.rs  bind_group_layout.rs  buffer.rs  command_encoder.rs  compute_pass.rs  compute_pipeline.rs  copy.rs  device.rs  error.rs  extent.rs  external_texture.rs  format.rs  future.rs  instance.rs  lib.rs  limits.rs  pass.rs  pipeline_id.rs  pipeline_layout.rs  query_set.rs  queue.rs  render_bundle.rs  render_pass.rs  render_pipeline.rs  sampler.rs  shader.rs  shader_naga.rs  shader_tint.rs  shader_types.rs  subpass.rs  test_helpers.rs  texture.rs  texture_view.rs  transient_attachment.rs  wgsl_language_features.rs
yawgpu-hal/: Cargo.toml
yawgpu-hal/src/: command.rs  descriptors.rs  error.rs  format.rs  immediates.rs  lib.rs  present.rs  shader.rs
yawgpu-hal/src/gles/: adapter.rs  buffer.rs  device.rs  egl.rs  format.rs  instance.rs  mod.rs  pipeline.rs  queue.rs  sampler.rs  surface.rs  texture.rs  wgl.rs
yawgpu-hal/src/metal/: buffer.rs  device.rs  encode.rs  format.rs  mod.rs  pipeline.rs  query_set.rs  queue.rs  surface.rs  test_helpers.rs  texture.rs
yawgpu-hal/src/noop/: mod.rs
yawgpu-hal/src/vulkan/: buffer.rs  device.rs  encode.rs  error.rs  format.rs  mod.rs  pipeline.rs  query_set.rs  queue.rs  surface.rs  test_helpers.rs  texture.rs
yawgpu-test/: Cargo.toml
yawgpu-test/src/: lib.rs
yawgpu-tint/: Cargo.toml  build.rs
yawgpu-tint/shim/: CMakeLists.txt  tint_shim.cpp  tint_shim.h
yawgpu-tint/src/: lib.rs
yawgpu/ffi/webgpu-headers/: yawgpu.h
yawgpu/src/: conv.rs  lib.rs
yawgpu/src/conv/: bind.rs  descriptors.rs  enums.rs  feature.rs  features.rs  format.rs  limits.rs  mod.rs  pipeline.rs  shader.rs  strings.rs
yawgpu/src/ffi/: adapter.rs  bindings.rs  buffer.rs  bundle.rs  command_buffer.rs  compute_pass.rs  device.rs  encoder.rs  external_texture.rs  instance.rs  mod.rs  pipelines.rs  query.rs  queue.rs  render_pass.rs  sampler.rs  shader.rs  surface.rs  texture.rs  tiled.rs
yawgpu/tests/: bind_group_layout_validation.rs  bind_group_validation.rs  buffer_creation_validation.rs  buffer_map_validation.rs  buffer_mapped_range_validation.rs  command_buffer_copy_validation.rs  command_encoder_lifecycle_validation.rs  command_texture_copy_validation.rs  compute_pipeline_validation.rs  cts_validation_bind_group.rs  cts_validation_buffer.rs  cts_validation_capability_features.rs  cts_validation_capability_limits.rs  cts_validation_encoding.rs  cts_validation_image_copy.rs  cts_validation_pipeline.rs  cts_validation_queue.rs  cts_validation_render_pass.rs  cts_validation_render_pipeline.rs  cts_validation_resource_usages.rs  cts_validation_state.rs  cts_validation_texture.rs  debug_marker_validation.rs  device_lost_validation.rs  e2e_gles_basic.rs  e2e_gles_buffer.rs  e2e_gles_compute.rs  e2e_gles_ffi.rs  e2e_gles_render.rs  e2e_gles_smoke.rs  e2e_gles_texture.rs  e2e_metal_basic.rs  e2e_metal_buffer.rs  e2e_metal_clip_distances.rs  e2e_metal_color_target.rs  e2e_metal_compile_churn.rs  e2e_metal_compute.rs  e2e_metal_depth.rs  e2e_metal_depth_clip_control.rs  e2e_metal_draw.rs  (+68 more)
yawgpu/tests/common/: mod.rs
yawgpu/tests/cts/validation/: bind_group_common.rs  common.rs  compute_pipeline.rs  create_bind_group.rs  create_bind_group_layout.rs  create_pipeline_layout.rs  debug_marker.rs  dispatch.rs  error_scope.rs  get_bind_group_layout.rs  layout_shader_compat.rs  non_filterable_texture.rs  pipeline_common.rs
yawgpu/tests/cts/validation/buffer/: create.rs  destroy.rs  mapping.rs
yawgpu/tests/cts/validation/encoding/: begin_compute_pass.rs  begin_render_pass.rs  common.rs  create_render_bundle_encoder.rs  encoder_open_state.rs  encoder_state.rs  render_bundle.rs
yawgpu/tests/cts/validation/image_copy/: buffer_related.rs  buffer_texture_copies.rs  common.rs  layout_related.rs  texture_related.rs
yawgpu/tests/cts/validation/pipeline/: immediates.rs
yawgpu/tests/cts/validation/query_set/: create.rs  destroy.rs
yawgpu/tests/cts/validation/queue/: buffer_mapped.rs  common.rs  destroyed_buffer.rs  destroyed_query_set.rs  destroyed_texture.rs  submit.rs  write_buffer.rs  write_texture.rs
yawgpu/tests/cts/validation/render_pass/: attachment_compatibility.rs  common.rs  render_pass_descriptor.rs  resolve.rs
(+188 files in other folders)
