[package]
name = "yawgpu-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
gles = ["yawgpu-hal/gles"]
shader-passthrough = []
tiled = ["yawgpu-tint/tiled", "yawgpu-hal/tiled"]

[dependencies]
yawgpu-hal = { path = "../yawgpu-hal" }
yawgpu-tint = { path = "../yawgpu-tint" }
arrayvec = "0.7"
parking_lot.workspace = true
thiserror.workspace = true
