[package]
name = "yawgpu-hal"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["noop"]
noop = []
vulkan = ["dep:ash"]
metal = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-metal"]

[dependencies]
ash = { version = "0.38.0", optional = true }
objc2 = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
thiserror.workspace = true
