[package]
name = "yawgpu-hal"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["noop"]
noop = []
vulkan = ["dep:ash"]
metal = ["dep:objc2", "dep:objc2-core-foundation", "dep:objc2-foundation", "dep:objc2-metal", "dep:objc2-quartz-core"]
tiled = []

[dependencies]
ash = { version = "0.38.0", optional = true }
objc2 = { workspace = true, optional = true }
objc2-core-foundation = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
objc2-quartz-core = { workspace = true, optional = true, features = ["CALayer", "CAMetalLayer", "objc2-core-foundation", "objc2-metal"] }
thiserror.workspace = true
