[package]
name = "yawgpu-hal"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["noop"]
noop = []
vulkan = ["dep:ash"]
metal = ["dep:objc2", "dep:objc2-core-foundation", "dep:objc2-foundation", "dep:objc2-metal", "dep:objc2-quartz-core"]
gles = ["dep:glow", "dep:khronos-egl", "dep:libloading", "dep:parking_lot"]
tiled = []

[dependencies]
ash = { version = "0.38.0", optional = true }
glow = { version = "0.14", optional = true }
khronos-egl = { version = "6", features = ["dynamic"], optional = true }
libloading = { version = "0.8", optional = true }
objc2 = { workspace = true, optional = true }
objc2-core-foundation = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
objc2-quartz-core = { workspace = true, optional = true, features = ["CALayer", "CAMetalLayer", "objc2-core-foundation", "objc2-metal"] }
parking_lot = { workspace = true, optional = true }
thiserror.workspace = true
