[package]
name = "yawgpu-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
metal = ["dep:metal"]
vulkan = ["dep:ash"]

[dependencies]
yawgpu = { path = "../yawgpu" }
yawgpu-core = { path = "../yawgpu-core" }
ash = { version = "0.38.0", optional = true }
metal = { version = "0.33.0", optional = true }
