[package]
name = "yawgpu-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
gles = []
metal = ["dep:objc2-metal"]
vulkan = ["dep:ash"]

[dependencies]
yawgpu = { path = "../yawgpu" }
yawgpu-core = { path = "../yawgpu-core" }
ash = { version = "0.38.0", optional = true }
objc2-metal = { workspace = true, optional = true }
