[package]
name = "yawgpu-tint"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# yawgpu's shader frontend, backed by Dawn's Tint (C++) via a small C shim.
# Phase 1 of the naga->Tint migration (specs/tracking/tint-migration-plan.md):
# this crate currently exposes only a smoke entry point proving the
# build/link/FFI path against a local Dawn checkout (env `YAWGPU_DAWN_DIR`).

[build-dependencies]
cmake = "0.1"
