[package]
name = "yawgpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
gles = ["yawgpu-core/gles", "yawgpu-hal/gles", "yawgpu-test/gles"]
metal = ["yawgpu-hal/metal", "yawgpu-test/metal"]
vulkan = ["yawgpu-hal/vulkan", "yawgpu-test/vulkan"]
# Selects the Tint shader frontend (parallel-then-switch; naga stays default).
tint = ["yawgpu-core/tint"]

[dependencies]
yawgpu-core = { path = "../yawgpu-core" }
yawgpu-hal = { path = "../yawgpu-hal" }

[build-dependencies]
bindgen = "0.72"

[dev-dependencies]
naga = { workspace = true, features = ["wgsl-in", "spv-out"] }
yawgpu-test = { path = "../yawgpu-test" }
yawgpu-hal = { path = "../yawgpu-hal" }
