[package]
name = "yawgpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# Tint is the default shader frontend. Build with `--no-default-features` (plus a
# backend feature, e.g. `--no-default-features --features metal`) to select the
# legacy naga frontend; naga is removed in Phase 4 once Tint has landed.
default = ["tint"]
gles = ["yawgpu-core/gles", "yawgpu-hal/gles", "yawgpu-test/gles"]
metal = ["yawgpu-hal/metal", "yawgpu-test/metal"]
vulkan = ["yawgpu-hal/vulkan", "yawgpu-test/vulkan"]
# Tint shader frontend (now the default; kept as an explicit feature until naga
# is removed in Phase 4).
tint = ["yawgpu-core/tint"]

[dependencies]
yawgpu-core = { path = "../yawgpu-core" }
yawgpu-hal = { path = "../yawgpu-hal" }

[build-dependencies]
bindgen = "0.72"

[dev-dependencies]
naga = { workspace = true, features = ["wgsl-in", "spv-out"] }
yawgpu-test = { path = "../yawgpu-test" }
yawgpu-hal = { path = "../yawgpu-hal" }
